[project]
name = "HF-Flux-ComfyUI"
description = "This custom node allows you to generate images directly from text prompts using Hugging Face's text-to-image models within ComfyUI. It provides a simple interface to leverage powerful AI models like FLUX.1-dev without leaving your ComfyUI workflow."
version = "1.0.0"
license = { file = "LICENSE.txt" }
dependencies = []

[project.urls]
Repository = "https://github.com/Semper-Sursum/HF-Flux-ComfyUI"

[tool.comfy]
PublisherId = "semper-sursum"
DisplayName = "HF-Flux-ComfyUI"
Icon = "https://example.com/icon.png"
